--- a/mapflow/static/ui/create_new_catalog_dialog.ui
+++ b/mapflow/static/ui/create_new_catalog_dialog.ui
@@ -83,7 +83,7 @@
 Tags: comma separated list of tags</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
