--- a/mapflow/dialogs/static/ui/provider_dialog.ui
+++ b/mapflow/dialogs/static/ui/provider_dialog.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>325</width>
-    <height>285</height>
+    <height>308</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -128,9 +128,6 @@
        </property>
       </widget>
      </item>
-     <item row="4" column="1">
-      <widget class="QLineEdit" name="password"/>
-     </item>
      <item row="5" column="0">
       <widget class="QLabel" name="label">
        <property name="text">
@@ -173,10 +170,30 @@
        </item>
       </widget>
      </item>
+     <item row="6" column="1">
+      <widget class="QCheckBox" name="save_credentials">
+       <property name="toolTip">
+        <string>Warninig! Login and password, if saved, will be stored in QGIS settings without encryption!</string>
+       </property>
+       <property name="text">
+        <string>Save login and password</string>
+       </property>
+      </widget>
+     </item>
+     <item row="4" column="1">
+      <widget class="QgsPasswordLineEdit" name="password"/>
+     </item>
     </layout>
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QgsPasswordLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>qgspasswordlineedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections>
   <connection>
