--- a/mapflow/static/ui/main_dialog.ui
+++ b/mapflow/static/ui/main_dialog.ui
@@ -587,7 +587,7 @@ mosaic</string>
         </property>
        </column>
       </widget>
-      <widget class="QPushButton" name="useSelectedMosaicButton">
+      <widget class="QPushButton" name="useSelectedImageButton">
        <property name="geometry">
         <rect>
          <x>10</x>
@@ -597,8 +597,8 @@ mosaic</string>
         </rect>
        </property>
        <property name="text">
-        <string>Use selected
-mosaic</string>
+        <string>Add image 
+for processing</string>
        </property>
       </widget>
       <widget class="QPushButton" name="deleteImageButton">
